@@ -6,7 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
--
+- Fixed #1814 "Misconfiguration of last_login_time default value in members
+  schema" by improving the logged_in.py script.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
